Release notes for xmlBlaster @version@ (http://www.xmlBlaster.org)

Changes for 0.xxx [xx, xxx 2003]
================================

 o Added MethodName argument to exportMessage in security message interceptor

 o Zhang Zhi Wei added a Microsoft SQL Server port for our persistence layer
   http://www.xmlblaster.org/xmlBlaster/doc/requirements/queue.jdbc.sqlserver.html

 o Completed ANSI-C client library for sync and async xmlBlaster access:
   http://www.xmlblaster.org/xmlBlaster/doc/requirements/client.c.socket.html

 o Added support for OmniORB 4.0.1 (C++ client library)

 o BUGFIX C++ object cleanup by Martin Johnson

 o Removed deprecated property scanning precedence, see PropEnv.java

 o BUGFIX to report nicer wrong configuration setting

 o BUGFIX  '-pluginsFile /yourdirectory/yourfile.xml' works now
   as expected


Changes for 0.848 [23, May 2003]
================================
 o Fix in XmlBlasterException for MakeFormat with index > {9}
   IBM JDK 1.3.1 can't handle it (i believe 1.4 handles it now).

 o Changed protocol plugin loading behavior.
   Now we throw an exception if the protocol plugin is not found
   instead of choosing the default protocol as fallback.
 
 o Updated requirements

 o Incompatible changes (update xmlBlaster.properties and xmlBlasterPlugins.xml):

   1. Removed XmlBlasterConnection.java, please use XmlBlasterAccess.java
      Removed I_ConnectionProblems.java, please use I_ConnectionStateListener.java

   2. XmlBlasterAccess.initCbServer(String loginName, String type, String version) -> initCbServer(String loginName, CallbackAddress cbAddress)

   3. Protocol "XML-RPC" renamed to "XMLRPC"
      -> client server communication will not work between this
         and the previous release.

   4. The protocol address is now configurable with Address.java/CallbackAddress.java
      with the method 
         public void setPluginProperty(String key, String value);
      or the old way with glob.setProperty()